--- a/prototype.kv
+++ b/prototype.kv
@@ -1,5 +1,17 @@
 #:kivy 1.0.9
 
 <Prototype>:
-    Button:
-        text: 'text'
+    BoxLayout:
+        Button:
+            text: 'page1'
+        Button:
+            text: 'page1'
+
+    BoxLayout:
+        Button:
+            text: 'page1'
+
+    BoxLayout:
+        Button:
+            text: 'page1'
+
