Basic listview in place

--- a/prototype.kv
+++ b/prototype.kv
@@ -4,8 +4,7 @@
     BoxLayout:
         Button:
             text: 'page1'
-        Button:
-            text: 'page1'
+        TrackListView:
 
     BoxLayout:
         Button:
