Added new views

--- a/prototype.kv
+++ b/prototype.kv
@@ -11,6 +11,7 @@
             text: 'page1'
 
     BoxLayout:
-        Button:
-            text: 'page1'
+        Widget:
+        TrackListView:
+
 
