All default view scaffolds in place

--- a/prototype.kv
+++ b/prototype.kv
@@ -1,14 +1,9 @@
 #:kivy 1.0.9
 
 <Prototype>:
-    BoxLayout:
-        Button:
-            text: 'page1'
-        TrackListView:
+    PlayingView:
 
-    BoxLayout:
-        Button:
-            text: 'page1'
+    PlaylistView:
 
     SearchView:
 
